# swissknife

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.MD  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.MD  LICENSE  Makefile  README.md  TESTING.md  build.rs  docker-compose.yml  rust-toolchain.toml  start_services.sh
.cargo/: audit.toml
.github/: release-drafter.yml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  claude.yml  codex-code-review.yml  codex.yml  integration.yml  release.yml
config/: default.toml  development.yml  itest.toml
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20240420_1_wallet_table.rs  m20240420_2_ln_address_table.rs  m20240420_3_invoice_table.rs  m20240420_4_payment_table.rs  m20241009_6_api_key_table.rs  m20251021_162217_convert_timestamptz_to_timestamp.rs  m20251224_162546_btc_fields_to_invoice.rs  m20260113_222755_fix_invoice_payment_hash_unique.rs  m20260609_143600_wallet_balance_table.rs  m20260704_000001_account_table.rs  m20260704_000002_auth_identity_table.rs  m20260704_000003_account_permission_table.rs  m20260704_000004_account_preference_table.rs  m20260704_000005_asset_table.rs  m20260704_000006_api_key_account_id.rs  m20260704_000007_backfill_oauth2_accounts.rs  m20260704_000008_asset_scoped_wallets.rs  m20260704_000008_wallet_account_asset_schema.rs  m20260704_000009_backfill_mainnet_wallet_accounts.rs  m20260704_000010_drop_api_key_user_id_fk.rs  m20260704_000010_finalize_wallet_schema.rs  m20260704_000011_ln_address_account_routes.rs  m20260704_000012_drop_legacy_wallet_contract.rs  m20260710_234825_add_relationship_indexes.rs  m20260717_105719_persist_lnurl_success_action.rs  m20260717_170449_add_client_event_log.rs  m20260717_173942_add_webhook_delivery.rs
crates/swissknife-api-types/: Cargo.toml
crates/swissknife-api-types/src/: api_key.rs  bitcoin.rs  invoice.rs  lib.rs  ln_address.rs  lnurl.rs  network.rs  payment.rs  request.rs  wallet.rs
crates/swissknife-types/: Cargo.toml  README.md
crates/swissknife-types/src/: account.rs  api_key.rs  auth.rs  bitcoin.rs  error.rs  event.rs  invoice.rs  lib.rs  ln_address.rs  lnurl.rs  network.rs  nostr.rs  payment.rs  permission.rs  query.rs  response.rs  system.rs  transaction.rs  wallet.rs
dashboard/: .dockerignore  .env.development  .env.example  .env.production  .env.production.numeraire  .env.production.umbrel  .eslintignore  .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  eslint.config.mjs  knip.jsonc  next.config.mjs  openapi-ts.config.mjs  package.json  playwright.config.ts  prettier.config.mjs  tsconfig.json  vitest.config.ts
dashboard/docs/: REDESIGN.md
dashboard/e2e/: global-setup.ts  global-teardown.ts  mock-oauth2.spec.ts
dashboard/public/: service-worker.js  site.webmanifest
dashboard/src/: config-global.ts  global-config.ts  global.css
dashboard/src/actions/: account-wallet.ts  account.ts  api-key.ts  btc-addresses.ts  invoices.ts  keys.ts  ln-addresses.ts  ln-node.ts  mempool-space.ts  payments.ts  system.ts  user-wallet.ts  wallet.ts
dashboard/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx
dashboard/src/auth/: permissions.test.ts  permissions.ts  (+1 more)
docs/: CONTRIBUTING.md  DEVELOPER_GUIDELINES.md
docs/adr/: 0001-appstore-uow-wallet-reservations.md  0002-identity-assets-wallet-model.md  0003-provider-fee-quotes.md  0004-client-event-outbox.md
migration/: Cargo.toml
migration/src/: lib.rs  m20240420_135901_ln_address_table.rs  m20240420_135902_invoice_table.rs  m20240420_135903_payment_table.rs  m20240420_194334_lightning_address_table.rs  m20240420_194334_lightning_addresses_table.rs  m20240420_194334_ln_address_table.rs  m20240420_195225_invoice_table.rs  m20240420_195225_lightning_invoice_table.rs  m20240420_195225_lightning_invoices_table.rs  m20240420_195439_lightning_payment_table.rs  m20240420_195439_lightning_payments_table.rs  m20240420_195439_payment_table.rs  m20240420_1_account_table.rs  m20240420_1_wallet_table.rs  m20240420_2_ln_address_table.rs  m20240420_2_wallet_table.rs  m20240420_3_invoice_table.rs  m20240420_3_ln_address_table.rs  m20240420_4_invoice_table.rs  m20240420_4_payment_table.rs  m20240420_5_payment_table.rs  m20241005_120705_ln_address_nostr.rs  m20241005_135904_ln_address_nostr.rs  m20241005_5_ln_address_nostr.rs  m20241009_135905_api_key_table.rs  m20241009_6_api_key_table.rs  m20241028_135908_permissions_as_json.rs  m20241028_154716_dates_without_tz.rs  m20250106_141600_config_table.rs  m20250311_000001_add_block_height_to_btc_output.rs  m20251021_162217_convert_timestamptz_to_timestamp.rs  m20251223_191844_add_bitcoin_support.rs  m20251223_191844_add_onchain_support.rs  m20251224_162538_btc_address_table.rs  m20251224_162542_btc_output_table.rs  m20251224_162542_btc_transaction_table.rs  m20251224_162546_btc_fields_to_invoice.rs  m20251224_162550_btc_fields_to_payment.rs  m20260113_222755_fix_invoice_payment_hash_unique.rs  (+2 more)
migrations/: 20231228201258_lightning_addresses_table.sql  20240308174752_lightning_invoices_table.sql  20240327205835_lightning_payments_table.sql
scripts/: check_changelog.py  update-protos.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/application/: mod.rs
src/domains/: mod.rs
src/infra/: mod.rs
src/models/: lightning_addresses.rs  lightning_invoices.rs  lightning_payments.rs  mod.rs  prelude.rs
storage/breez/: storage.sql  sync_storage.sql
storage/breez2/: storage.sql  sync_storage.sql
storage/ffbc9146/: log  rgb_db
storage/local/: storage.sql  sync_storage.sql
tests/: api.rs
tests/common/: assertions.rs  chain.rs  client.rs  counterparty.rs  db.rs  fixtures.rs  harness.rs  lnurl_server.rs  mod.rs  models.rs  oauth2.rs  wait.rs
tests/itest/: README.md  docker-compose.yml
tests/suites/: accounts.rs  api_keys.rs  asset_scoping.rs  auth.rs  bitcoin.rs  guards.rs  invoices.rs  lightning.rs  ln_addresses.rs  lnurl_send.rs  me.rs  mod.rs  oauth2.rs  payments.rs  system.rs  wallets.rs  well_known.rs
(+1223 files in other folders)
