[package]
name = "swissknife"
version = "0.1.7"
edition = "2021"
authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
rust-version = "1.92"
license = "MIT"
description = "Numeraire SwissKnife enables easy integration of Bitcoin, Lightning and smart contract protocols."
repository = "https://github.com/bitcoin-numeraire/swissknife"
homepage = "https://numeraire.tech"
build = "build.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_bolt = "0.3.5"
serde_with = "3.16.1"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs", "io-util"] }
breez-sdk-spark = { git = "https://github.com/darioAnongba/spark-sdk", rev="61b7fff0b55188af02ea5d8be80edda8fbf23eeb"}
bip39 = { version = "*", features = ["rand_core"] }
config = { version = "0.15.19", features = ["yaml", "json", "toml"] }
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] } 
reqwest = { version = "0.12.28", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = "0.4.43"
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = [
    "fs",
    "timeout",
    "trace",
    "cors",
] }
regex = "1"
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
strum = "0.27"
strum_macros = "0.27"
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
lightning-invoice = "0.34.0"
hex = "0.4.3"
anyhow = "1.0.102"
futures-util = "0.3.32"
humantime = "2.3.0"
rust_socketio = { version = "0.6.0", features = ["async"] }
bcrypt = "0.18.0"
migration = { path = "migration" }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
native-tls = "0.2.18"
nostr-sdk = "0.44.1"
rand = "0.10.0"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
http = "1.4.0"
bytes = "1.11.1"
bitcoin = "=0.32.8"
aes = "0.8"
cbc = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.5"
chrono = "0.4.43"

[profile.release]
lto = true
codegen-units = 1
strip = true
