[workspace]
members = ["migration", "crates/swissknife-types"]
resolver = "2"

[package]
name = "swissknife"
version = "0.1.7"
edition = "2021"
authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
rust-version = "1.96"
license = "MIT"
description = "Numeraire SwissKnife enables easy integration of Bitcoin, Lightning and smart contract protocols."
repository = "https://github.com/bitcoin-numeraire/swissknife"
homepage = "https://numeraire.tech"
build = "build.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bolt = "0.5.2"
serde_with = "3.20.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs", "io-util"] }
bip21 = { version = "0.5.0", features = ["std"] }
lnurl = { package = "lnurl-rs", version = "0.9.0", default-features = false, features = ["async"] }
config = { version = "0.15.23", features = ["yaml", "json", "toml"] }
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = "0.4.44"
thiserror = "2.0.18"
tower-http = { version = "0.6.11", features = [
    "fs",
    "timeout",
    "trace",
    "cors",
] }
regex = "1"
sea-orm = { version = "1.1.20", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
strum = "0.28"
strum_macros = "0.28"
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
prost = "0.14.3"
lightning-invoice = "0.34.0"
hex = "0.4.3"
anyhow = "1.0.102"
futures-util = "0.3.32"
humantime = "2.3.0"
rust_socketio = { version = "0.6.0", features = ["async"] }
bcrypt = "0.19.1"
migration = { path = "migration" }
swissknife-types = { path = "crates/swissknife-types" }
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
native-tls = "0.2.18"
nostr-sdk = "0.44.1"
rand = "0.10.1"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
http = "1.4.1"
bytes = "1.11.1"
bitcoin = "=0.32.100"

[build-dependencies]
tonic-prost-build = "0.14.6"
chrono = "0.4.44"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
mockall = "0.14.0"
