[package]
name = "swissknife-types"
version = "0.2.0"
edition = "2021"
authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
rust-version = "1.96"
license = "MIT"
description = "Shared API/contract types (entities, enums, requests, responses) for Numeraire SwissKnife."
repository = "https://github.com/bitcoin-numeraire/swissknife"
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.20.0"
strum = "0.28"
strum_macros = "0.28"
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
nostr = "0.44"
